# steam_controller_custom_firmware

./: .gitignore  Cargo.toml  Makefile.toml  README.md  memory.x  rust-toolchain
.cargo/: config
bootloader/: Cargo.toml  memory.x
bootloader/src/: led.rs  lpc11uxx_misc.rs  main.rs  nrf_comms.rs  programming_mode.rs  rt.rs  system.rs  usb_debug_uart.rs  usb_descriptors.rs
bootloader/src/usb_descriptors/: cdc.rs  hid.rs
driver-cli/: Cargo.toml
driver-cli/src/: main.rs
firmware/: Cargo.toml  memory.x
firmware/src/: led.rs  main.rs  rt.rs  system.rs  usbd.rs
firmware/src/rom/usbd/: mod.rs
lpc11uxx-rom/: Cargo.toml
lpc11uxx-rom/src/: iap.rs  lib.rs
lpc11uxx-rom/src/usbd/: mod.rs
src/: led.rs  main.rs  system.rs  usbd.rs
src/rom/: mod.rs
src/rom/usbd/: mod.rs
