[package]
authors = ["Mary"]
edition = "2018"
readme = "README.md"
name = "custom-firmware"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
embedded-hal = "0.2.3"
lpc11uxx = {version = "0.3.0", features = ["rt"]}
lpc11uxx-hal = { git = "https://github.com/lpc-rs/lpc11uxx-hal.git" }

# this lets you use `cargo fix`!
[[bin]]
name = "custom-firmware"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
