[package]
name = "bootloader"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
embedded-hal = "0.2.3"
lpc11uxx = {version = "0.3.0", features = ["rt"]}
lpc11uxx-hal = { git = "https://github.com/roblabla/lpc11uxx-hal.git", branch = "poc" }
static_assertions = "1.1.0"
lpc11uxx-rom = { path = "../lpc11uxx-rom" }
heapless = "0.5"
vcell = "0.1.2"
bitflags = "1.2"
bitfield = "0.13"