[package]
name = "driver-cli"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#hidapi = "1.1"
hidapi-rs = { git = "https://github.com/roblabla/hidapi-rs" }