[package]
name = "lpc11uxx-rom"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.13"
enum_primitive = { git = "https://github.com/roblabla/enum_primitive-rs.git", branch = "master"}
static_assertions = "1.1.0"
